# CxRP

./: .baseline-validation.json  .custodian.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.kodo/: config.json  run-status.md
cxrp/: __init__.py
cxrp/contracts/: __init__.py  common.py  evidence.py  execution_request.py  execution_result.py  execution_target.py  lane_decision.py  runtime_binding.py  task_proposal.py
cxrp/validation/: json_schema.py
cxrp/vocabulary/: agent.py  artifact.py  capability.py  executor.py  lane.py  runtime.py  shipping_form.py  status.py
docs/: README.md
docs/integrations/: operator_console.md  switchboard.md
docs/spec/: v0.1.md
ecp/contracts/: __init__.py  common.py  execution_request.py  execution_result.py  lane_decision.py  task_proposal.py
ecp/validation/: json_schema.py
ecp/vocabulary/: artifact.py  status.py
examples/v0.1/: execution_request.basic.json  execution_result.failure.json  execution_result.success.json  lane_decision.basic.json  task_proposal.basic.json
examples/v0.2/: execution_request.basic.json  execution_result.success.json  task_proposal.basic.json
examples/v0.3/: execution_request.basic.json  execution_result.failure.json  execution_result.success.json  lane_decision.basic.json  task_proposal.basic.json
schemas/v0.1/: execution_request.json  execution_result.json  lane_decision.json  (+1 more)
tests/: conftest.py  test_capability.py  test_contracts.py  test_evidence.py  test_execution_target.py  test_runtime_binding.py  test_shipping_form.py
(+4 files in other folders)
