[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-contract-protocol"
version = "0.1.0"
description = "Contract-only specification models for ECP"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
